# YouTube-video-to-Blog-Post

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
outputs/: blog.md  summary.md
src/yt_to_blog/: app.py  crew.py  get_api.py  main.py  requirements.txt
src/yt_to_blog/config/: agents.yaml  tasks.yaml
src/yt_to_blog/db/: chroma.sqlite3
src/yt_to_blog/outputs/: blog.md  summary.md
src/yt_to_blog/tools/: custom_tool.py
